--- a/style.css
+++ b/style.css
@@ -1,15 +1,45 @@
-#Body {
-    background: linear-gradient(#ff99ff 0%, #73f1ff 100%);
+#Hi {
+    background: linear-gradient(cyan 0%, pink 100%);
+}
+
+#SchoolS {
     text-align: center;
 }
-#line {
-    height: 6px;
-    background-color: #000;
-    width: 70px;
-    margin: 8px auto;
+
+p {
+    padding-left: 100px;
+    padding-right: 10 0px;
 }
-p{
-    padding-left: 30%;
-    padding-right: 30%;
-    font-size: 20px;
+
+img {
+    border-radius: 300px;
+}
+
+.menu {
+    list-style: none;
+    position: absolute;
+    top: 10px;
+    right: 30px;
+    cursor: pointer;
+}
+
+.list {
+    float: left;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-right: 1px;
+}
+
+.list:hover {
+    background-color: dodgerblue;
+}
+
+#lbl {
+    font-family: 'Akaya Kanadaka', cursive;
+}
+ 
+li:last-child {
+    border-right: none;
 }
